# Parallelism

neural/: CMakeLists.txt  main.cu  model.py  net.cu
neural/weights/: fc1.npy  fc1_bias.npy  fc2.npy  fc2_bias.npy  fc3.npy  fc3_bias.npy  input.npy
summator/: task.c  task_multiple_gpu
transcalency/cpu/: Source  Source.cpp  cpu  transcalency
transcalency/cublas/: Source_o.cpp
transcalency/cuda/: source.cu
transcalency/mpi/: task.cu  task_nccl.cu
transcalency/openACC/: Source  Source.cpp  Source_o.cpp  a.out  cpu  deoptimised.cpp  gpu  gpu_o  host  host_o  multicore  multicore_o  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep
